Add style to Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Parisienne&display=swap');
+
+*{
+	font-family: "Orbitron", sans-serif;
+}
 
 * {
 	/* padding: 0;
@@ -6,11 +10,11 @@
   box-sizing: border-box;
 } 
 
-:root {
-  --mainColor: #f35d74;
+/* :root {
+  --mainColor: #0f0f0f;
 	--mainColorLight: #5767aa;
 	--secondaryColor: #db2b39;
 	--textColor: #eee;
   font-family: "Titillium Web", sans-serif;
-}
+} */
 
