--- a/src/components/addProductsForm/AddForm.css
+++ b/src/components/addProductsForm/AddForm.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+.modal_overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -12,7 +12,7 @@
   }
   
 
-  .modal {
+  .modal1 {
     background: white;
     padding: 20px;
     border-radius: 8px;
