--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,15 @@
   font-family: "Titillium Web", sans-serif;
 } */
 
+ /* este selector es una prueba*/
+
+.prueba{
+	background-color: red;
+	margin-top: 200px;
+}
+
+.prueba2{
+	background-color: red;
+	margin-top: 200px;
+}
+
