--- a/src/components/addProductsForm/top5products/top5products.css
+++ b/src/components/addProductsForm/top5products/top5products.css
@@ -26,7 +26,9 @@ path{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center;    
+    align-items:center;  
+    width: 100%;
+    height: 60%;  
     
 
 } 
@@ -46,10 +48,19 @@ path{
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    gap: 3px;
+    gap: 7px;
     margin: 10px;
-   
     
+}
+
+@media screen and (max-width: 430px) {
+  .card-group{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: auto;
+    margin-left: 35px ;
+  }
 }
 
 /* .card-group {
