--- a/src/components/HeroImg/Hero.css
+++ b/src/components/HeroImg/Hero.css
@@ -3,29 +3,132 @@ body {
 }
 .heroHolder {
     height: 100vh;
-    width: auto;
+    width: 100%;
+    position: relative;
     margin-top: 100px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-image: url("./src/assets/Images/logo.png");
+    background-image: url("./src/assets/Images/hero-img.png");
    
 } 
+.btn {
+    margin-top: 37%;
+    margin-left: 23%;
+    position:relative;
+    z-index: 3;
+    width: 300px;
+    padding: 30px;
+    font-size: 24px;
+    background-color: #060C1F;
+    color:#00DFF0;
+    border-radius: 10px;
+    transition: transform 0.2s ease-in-out;
+  }
+.btn:hover{
+    transform: scale(1.1);
+}
+
+  .btn::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 17px 3px #ffff01,0 0 4px 2px #ffff01;
+    animation-name: gradient-shadow;
+    animation-timing-function: ease;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    border-radius: 10px;
+  }
+  @keyframes gradient-shadow{
+     0% {
+              box-shadow: 0 0 17px 3px #C586C0,0 0 4px 2px #C586C0;
+    }
+    20% {
+                 box-shadow: 0 0 17px 3px #0ff,0 0 4px 2px #0ff;
+    }
+     40% {
+              box-shadow: 0 0 17px 3px #0f0,0 0 4px 2px #0f0;
+    }
+    60% {
+              box-shadow: 0 0 17px 3px #ffff01,0 0 4px 2px #ffff01;
+    }
+     80% {
+              box-shadow: 0 0 17px 3px #F0008E,0 0 4px 2px #F0008E;
+    }
+    100% {
+              box-shadow: 0 0 17px 3px #C586C0,0 0 4px 2px #C586C0;
+    }
+  }
 
  @media only screen and (max-width: 1304px){
     .heroHolder {
         background-size: contain;
        
-        
     }
+    .btn {
+        margin-top: 45%;
+        margin-left: 25%;
+        width: 200px;
+        padding: 10px;
+      }
+    
 } 
- @media only screen and (max-width: 1200px){
+ @media only screen and (max-width: 1212px){
     .heroHolder {
         background-size: contain;
-       
          height: 400px; 
+         
     }
+    .btn {
+        margin-top: 28%;
+        margin-left: 30%;
+        width: 145px;
+        padding: 10px;
+        padding: 20px;
+        font-size: 22px;
+      }
+    
 
+}
+@media only screen and (max-width: 1024px){
+    .btn {
+        margin-top: 34%;
+        margin-left: 26%;
+        width: 145px;
+        padding: 10px;
+      }
+}
+@media only screen and (max-width: 1111px){
+    .btn {
+        margin-top: 34%;
+        margin-left: 28%;
+        width: 145px;
+        padding: 10px;
+        font-size: 18px;
+      }
+}
+
+@media only screen and (max-width: 820px){
+    .btn {
+        margin-top: 40%;
+        margin-left: 23%;
+        width: 145px;
+        padding: 10px;
+        padding: 10px;
+        font-size: 18px;
+      }
+}
+@media only screen and (max-width: 720px){
+    .btn {
+        margin-top: 48%;
+        margin-left: 20%;
+        width: 145px;
+        padding: 10px;
+      }
 }
 
 @media only screen and (max-width: 600px){
@@ -33,13 +136,50 @@ body {
       
          background-image: url("./src/assets/Images/hero-600.png");
     }
+    .btn {
+        margin-top: 60%;
+        margin-left: 8%;
+        width: 145px;
+        padding: 10px;
+      }
 
 } 
+@media only screen and (max-width: 430px){
+    .btn {
+        margin-top: 65%;
+        margin-left: 8%;
+        width: 145px;
+        padding: 10px;
+      }
+    
+}
 
-@media only screen and (max-width: 350px){
+@media only screen and (max-width: 360px){
     .heroHolder {
       
          background-image: url("./src/assets/Images/hero-350.png");
     }
+    .btn {
+        margin-top: 80%;
+        margin-left: 8%;
+        width: 145px;
+        padding: 10px;
+      }
+    
+
+} 
+
+@media only screen and (max-width: 360px){
+    .heroHolder {
+      
+         background-image: url("./src/assets/Images/hero-350.png");
+    }
+    .btn {
+        margin-top: 80%;
+        margin-left: 8%;
+        width: 145px;
+        padding: 10px;
+      }
+    
 
 } 
