--- a/src/components/top5products/top5products.css
+++ b/src/components/top5products/top5products.css
@@ -2,8 +2,9 @@
     background-color: rgb(0, 0, 0);
 } */
 
-.topTitle{
-    text-align: center;
+h1{
+    display: flex;
+    justify-content: center;
     color: aqua;
 }
 
@@ -16,6 +17,7 @@
 
 path{
     color:aqua;
+   
 }
 
 .card {
