--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,9 @@
 .homeBody{
     width: 900px;
-    margin-top: 200px;
-    gap: 100px;
+    margin: 200px;
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
