--- a/src/pages/payment.css
+++ b/src/pages/payment.css
@@ -1,3 +1,11 @@
-.payform{
- padding:15vh
+.payment_Container{
+    margin-top: 200px;
+    background-color: #060017;
+    border: 1px solid #F0008E;
+    /* margin: 200px auto; */
+    border-radius: 10px;
+    align-items: center;
+    height: 400px;
+    padding: 3rem;
 }
+
