--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,9 +1,9 @@
-.homeBody{
+/* .homeBody{
     width: 900px;
     margin: 200px;
-    /* background-color: yellow; */
+  
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-}
+} */
