--- a/src/pages/payment.css
+++ b/src/pages/payment.css
@@ -5,7 +5,11 @@
     /* margin: 200px auto; */
     border-radius: 10px;
     align-items: center;
-    height: 400px;
+    height: 600px;
     padding: 3rem;
+}
+
+.button_payment{
+    display:flex;
 }
 
