--- a/src/components/HeroImg/Hero.css
+++ b/src/components/HeroImg/Hero.css
@@ -1,5 +1,6 @@
 body {
     background-color: #060017;
+    margin: 0;
 }
 .heroHolder {
     height: 100vh;
@@ -10,9 +11,10 @@ body {
     background-size: cover;
     background-position: center center;
     background-image: url("./src/assets/Images/hero-img.png");
+    
    
 } 
-.btn {
+.btnTrans {
     margin-top: 37%;
     margin-left: 23%;
     position:relative;
@@ -25,11 +27,11 @@ body {
     border-radius: 10px;
     transition: transform 0.2s ease-in-out;
   }
-.btn:hover{
+.btnTrans:hover{
     transform: scale(1.1);
 }
 
-  .btn::before{
+  .btnTrans::before{
     content: '';
     position: absolute;
     left: 0;
@@ -69,7 +71,7 @@ body {
         background-size: contain;
        
     }
-    .btn {
+    .btnTrans {
         margin-top: 45%;
         margin-left: 25%;
         width: 200px;
@@ -83,7 +85,7 @@ body {
          height: 400px; 
          
     }
-    .btn {
+    .btnTrans {
         margin-top: 28%;
         margin-left: 30%;
         width: 145px;
@@ -95,7 +97,7 @@ body {
 
 }
 @media only screen and (max-width: 1024px){
-    .btn {
+    .btnTrans {
         margin-top: 34%;
         margin-left: 26%;
         width: 145px;
@@ -103,7 +105,7 @@ body {
       }
 }
 @media only screen and (max-width: 1111px){
-    .btn {
+    .btnTrans {
         margin-top: 34%;
         margin-left: 28%;
         width: 145px;
@@ -113,7 +115,7 @@ body {
 }
 
 @media only screen and (max-width: 820px){
-    .btn {
+    .btnTrans {
         margin-top: 40%;
         margin-left: 23%;
         width: 145px;
@@ -123,7 +125,7 @@ body {
       }
 }
 @media only screen and (max-width: 720px){
-    .btn {
+    .btnTrans {
         margin-top: 48%;
         margin-left: 20%;
         width: 145px;
@@ -136,7 +138,7 @@ body {
       
          background-image: url("./src/assets/Images/hero-600.png");
     }
-    .btn {
+    .btnTrans {
         margin-top: 60%;
         margin-left: 8%;
         width: 145px;
@@ -145,7 +147,7 @@ body {
 
 } 
 @media only screen and (max-width: 430px){
-    .btn {
+    .btnTrans {
         margin-top: 65%;
         margin-left: 8%;
         width: 145px;
@@ -159,7 +161,7 @@ body {
       
          background-image: url("./src/assets/Images/hero-350.png");
     }
-    .btn {
+    .btnTrans {
         margin-top: 80%;
         margin-left: 8%;
         width: 145px;
@@ -174,7 +176,7 @@ body {
       
          background-image: url("./src/assets/Images/hero-350.png");
     }
-    .btn {
+    .btnTrans {
         margin-top: 80%;
         margin-left: 8%;
         width: 145px;
